@@ -26,6 +26,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 8868) Separate "blocked" message for autoblocks
 * Adding expiry of block to block messages
 * Bulk mail options ($wgEnotifImpersonal, $wgEnotifUseJobQ) for large sites
+* Links to redirect pages in categories are wrapped in <span
+  class="redirect-in-category"></span>
 
 == Bugfixes since 1.10 ==
 
